--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.6.3",
     "react-native": "0.57.8",
     "react-native-elements": "^1.0.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-parallax-scrollview": "^3.0.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.2.0",
