--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-elements": "^1.0.0",
     "react-native-image-picker": "^0.28.1",
     "react-native-parallax-scrollview": "^3.0.0",
+    "react-native-popup-menu": "^0.15.6",
     "react-native-router-flux": "^4.0.6",
     "react-native-vector-icons": "^6.2.0",
     "react-native-video": "^4.3.1",
